--- a/test/test.html
+++ b/test/test.html
@@ -25,7 +25,7 @@
   <input type="radio" id="star_2" name="rate" value="2" />
   <label for="star_2" title="Well">★</label>
   <input type="radio" id="star_1" name="rate" value="1" />
-  <label for="star_1" title="Incredible">★</labe>
+  <label for="star_1" title="Incredible">★</label>
     </div>
 	<!-- Ціна товару -->
   	<h3>1200 грн.<h3>
@@ -51,7 +51,7 @@
   <input type="radio" id="star_2" name="rate" value="2" />
   <label for="star_2" title="Well">★</label>
   <input type="radio" id="star_1" name="rate" value="1" />
-  <label for="star_1" title="Incredible">★</labe>
+  <label for="star_1" title="Incredible">★</label>
     </div>
 	<!-- Ціна товару -->
   	<h3>1100 грн.<h3>
