--- a/test/test.html
+++ b/test/test.html
@@ -76,7 +76,7 @@
   <input type="radio" id="star_2" name="rate" value="2" />
   <label for="star_2" title="Well">★</label>
   <input type="radio" id="star_1" name="rate" value="1" />
-  <label for="star_1" title="Incredible">★</labe>
+  <label for="star_1" title="Incredible">★</label>
     </div>
 	<!-- Ціна товару -->
   	<h3>1800 грн.<h3>
@@ -101,7 +101,7 @@
   <input type="radio" id="star_2" name="rate" value="2" />
   <label for="star_2" title="Well">★</label>
   <input type="radio" id="star_1" name="rate" value="1" />
-  <label for="star_1" title="Incredible">★</labe>
+  <label for="star_1" title="Incredible">★</label>
     </div>
 	<!-- Ціна товару -->
   	<h3>21000 грн.<h3>
@@ -126,7 +126,7 @@
   <input type="radio" id="star_2" name="rate" value="2" />
   <label for="star_2" title="Well">★</label>
   <input type="radio" id="star_1" name="rate" value="1" />
-  <label for="star_1" title="Incredible">★</labe>
+  <label for="star_1" title="Incredible">★</label>
     </div>
 	<!-- Ціна товару -->
   	<h3>2200грн.<h3>
@@ -151,7 +151,7 @@
   <input type="radio" id="star_2" name="rate" value="2" />
   <label for="star_2" title="Well">★</label>
   <input type="radio" id="star_1" name="rate" value="1" />
-  <label for="star_1" title="Incredible">★</labe>
+  <label for="star_1" title="Incredible">★</label>
     </div>
 	<!-- Ціна товару -->
   	<h3>2300 грн.<h3>
