--- a/test/test.html
+++ b/test/test.html
@@ -17,15 +17,15 @@
   	<!-- Рейтинг товару -->
   	<div id="rate" class="rating">
   <input type="radio" id="star_5" name="rate" value="5" />
-  <label for="star_5" title="Awful"> ★ </label>
+  <label for="star_5">★</label>
   <input type="radio" id="star_4" name="rate" value="4" />
-  <label for="star_4" title="Bad">★</label>
+  <label for="star_4">★</label>
   <input type="radio" id="star_3" name="rate" value="3" />
-  <label for="star_3" title="Normally">★</label>
+  <label for="star_3">★</label>
   <input type="radio" id="star_2" name="rate" value="2" />
-  <label for="star_2" title="Well">★</label>
+  <label for="star_2">★</label>
   <input type="radio" id="star_1" name="rate" value="1" />
-  <label for="star_1" title="Incredible">★</label>
+  <label for="star_1">★</label>
     </div>
 	<!-- Ціна товару -->
   	<h3>1200 грн.<h3>
@@ -43,15 +43,15 @@
   	<!-- Рейтинг товару -->
   	<div id="rate" class="rating">
   <input type="radio" id="star_5" name="rate" value="5" />
-  <label for="star_5" title="Awful"> ★ </label>
+  <label for="star_5">★</label>
   <input type="radio" id="star_4" name="rate" value="4" />
-  <label for="star_4" title="Bad">★</label>
+  <label for="star_4">★</label>
   <input type="radio" id="star_3" name="rate" value="3" />
-  <label for="star_3" title="Normally">★</label>
+  <label for="star_3">★</label>
   <input type="radio" id="star_2" name="rate" value="2" />
-  <label for="star_2" title="Well">★</label>
+  <label for="star_2">★</label>
   <input type="radio" id="star_1" name="rate" value="1" />
-  <label for="star_1" title="Incredible">★</label>
+  <label for="star_1">★</label>
     </div>
 	<!-- Ціна товару -->
   	<h3>1100 грн.<h3>
@@ -68,15 +68,15 @@
   	<!-- Рейтинг товару -->
   	<div id="rate" class="rating">
   <input type="radio" id="star_5" name="rate" value="5" />
-  <label for="star_5" title="Awful"> ★ </label>
+  <label for="star_5">★</label>
   <input type="radio" id="star_4" name="rate" value="4" />
-  <label for="star_4" title="Bad">★</label>
+  <label for="star_4">★</label>
   <input type="radio" id="star_3" name="rate" value="3" />
-  <label for="star_3" title="Normally">★</label>
+  <label for="star_3">★</label>
   <input type="radio" id="star_2" name="rate" value="2" />
-  <label for="star_2" title="Well">★</label>
+  <label for="star_2">★</label>
   <input type="radio" id="star_1" name="rate" value="1" />
-  <label for="star_1" title="Incredible">★</label>
+  <label for="star_1">★</label>
     </div>
 	<!-- Ціна товару -->
   	<h3>1800 грн.<h3>
@@ -93,15 +93,15 @@
   	<!-- Рейтинг товару -->
   	<div id="rate" class="rating">
   <input type="radio" id="star_5" name="rate" value="5" />
-  <label for="star_5" title="Awful"> ★ </label>
+  <label for="star_5">★</label>
   <input type="radio" id="star_4" name="rate" value="4" />
-  <label for="star_4" title="Bad">★</label>
+  <label for="star_4">★</label>
   <input type="radio" id="star_3" name="rate" value="3" />
-  <label for="star_3" title="Normally">★</label>
+  <label for="star_3">★</label>
   <input type="radio" id="star_2" name="rate" value="2" />
-  <label for="star_2" title="Well">★</label>
+  <label for="star_2">★</label>
   <input type="radio" id="star_1" name="rate" value="1" />
-  <label for="star_1" title="Incredible">★</label>
+  <label for="star_1">★</label>
     </div>
 	<!-- Ціна товару -->
   	<h3>21000 грн.<h3>
@@ -118,15 +118,15 @@
   	<!-- Рейтинг товару -->
   	<div id="rate" class="rating">
   <input type="radio" id="star_5" name="rate" value="5" />
-  <label for="star_5" title="Awful"> ★ </label>
+  <label for="star_5">★</label>
   <input type="radio" id="star_4" name="rate" value="4" />
-  <label for="star_4" title="Bad">★</label>
+  <label for="star_4">★</label>
   <input type="radio" id="star_3" name="rate" value="3" />
-  <label for="star_3" title="Normally">★</label>
+  <label for="star_3">★</label>
   <input type="radio" id="star_2" name="rate" value="2" />
-  <label for="star_2" title="Well">★</label>
+  <label for="star_2">★</label>
   <input type="radio" id="star_1" name="rate" value="1" />
-  <label for="star_1" title="Incredible">★</label>
+  <label for="star_1">★</label>
     </div>
 	<!-- Ціна товару -->
   	<h3>2200грн.<h3>
@@ -143,15 +143,15 @@
   	<!-- Рейтинг товару -->
   	<div id="rate" class="rating">
   <input type="radio" id="star_5" name="rate" value="5" />
-  <label for="star_5" title="Awful"> ★ </label>
+  <label for="star_5">★</label>
   <input type="radio" id="star_4" name="rate" value="4" />
-  <label for="star_4" title="Bad">★</label>
+  <label for="star_4">★</label>
   <input type="radio" id="star_3" name="rate" value="3" />
-  <label for="star_3" title="Normally">★</label>
+  <label for="star_3">★</label>
   <input type="radio" id="star_2" name="rate" value="2" />
-  <label for="star_2" title="Well">★</label>
+  <label for="star_2">★</label>
   <input type="radio" id="star_1" name="rate" value="1" />
-  <label for="star_1" title="Incredible">★</label>
+  <label for="star_1">★</label>
     </div>
 	<!-- Ціна товару -->
   	<h3>2300 грн.<h3>
